# Vortex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/anidiff/: anidiff.py
scripts/diffusion/: launch-always-run.sh  launch-short.sh  sd-loop.py  sd.py
scripts/dynio/: run.py  tocsv.py
scripts/e5/: e5-mistral.py  e5.py  launch-always-run.sh  launch-once.sh
scripts/generation/: launch-always-run.sh  launch-no-batching.sh  launch-once-no-batching.sh  launch-once.sh  llama3.py
scripts/llm/: README.md  env.sh  launch-always-run.sh  launch-short.sh  llm.py
scripts/minilm/: minilm.py
scripts/prefill/: launch-always-run.sh  launch-once.sh  llama3.py
scripts/ssb/: cmd.sh
scripts/theory/: theory.ipynb
src/: CMakeLists.txt
src/crystal-ssb/: CMakeLists.txt  q11.cc  q12.cc  q13.cc  q21.cc  q22.cc  q23.cc  q31.cc  q32.cc  q33.cc  q34.cc  q41.cc  q42.cc  q43.cc
src/crystal-ssb-selectivity/: CMakeLists.txt  q11.cc  q12.cc  q13.cc  q21.cc  q22.cc  q23.cc  q31.cc  q32.cc  q33.cc  q34.cc  q41.cc  q42.cc  q43.cc
src/crystal-ssb-zero-copy/: CMakeLists.txt  q11.cc  q12.cc  q13.cc  q21.cc  q22.cc  q23.cc  q31.cc  q32.cc  q33.cc  q34.cc  q41.cc  q42.cc  q43.cc
src/examples/: CMakeLists.txt  bandwidthProfile.cc  deviceProperties.cc  dynio.cc  gpuAsDMA.cc  gpubandwidth.cc  hashtable.cc  hostCallback.cc  ioplan.cc  join.cc  sort-alt.cc  sort.cc  sumSelective.cc  zero-copy.cc
src/execution/: CMakeLists.txt
src/execution/include/execution/: execution.h
src/execution/include/execution/ops/: join.h  sort.h
src/hip/: CMakeLists.txt  README.md
src/hip/include/: hipWrapper.h
src/hip/src/: hipWrapper.cc
src/kernels/: CMakeLists.txt
src/kernels/include/: kernels.h
src/kernels/include/crystal-zero-copy/lib/: crystal.h  load.h  pred.h  reduce.h  store.h
src/kernels/include/crystal-zero-copy/ssb/: q1x.h  q2x.h  q31.h  q32.h  q33.h  q34.h  q41.h  q42.h  q43.h
src/kernels/include/crystal/lib/: crystal.h  join.h  load.h
src/kernels/include/crystal/ssb/: q1x.h  q2x.h  q31.h  q32.h  q33.h  q34.h  q41.h  q42.h  q43.h
src/kernels/include/data/: double_buffer.h
src/kernels/include/join/: join.h
src/kernels/include/simple/: kernels.h
src/kernels/include/sort/: sort.h
src/kernels/include/zero-copy-multiple/: data.h
src/kernels/src/: sort.cc
src/sched/: CMakeLists.txt
src/sched/include/: io-sched.h
src/sched/src/: io-sched.cc
src/ssb-utils/: CMakeLists.txt
src/ssb-utils/include/ssb-utils/: dataset.h  ssb-utils.h
src/ssb-utils/src/: ssb-utils.cc
src/tools/: CMakeLists.txt  permutation.cc  uniqueKeys.cc
